[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Player/Player_Script/Base_Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Player/Player_Script/Hitter/Hitter_Animation.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Player/Player_Script/Hitter/Player_Hitter_AniPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Player/Player_Script/Hitter/Player_Hitter.gd" type="Script" id=4]
[ext_resource path="res://Assets/Player/Player_Script/Hitter/Player_Weapon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Player/Player_Weapons/Bat/Cross_Hair.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 22.5 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[node name="Player_Hitter" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Collision" parent="." index="1"]
visible = false
position = Vector2( 0, 7.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="3" instance=ExtResource( 3 )]

[node name="AnimationTree" parent="." index="4" instance=ExtResource( 2 )]
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 3 )

[node name="Player_Weapon" parent="." index="5" instance=ExtResource( 5 )]

[node name="Cross_Hair" type="Sprite" parent="." index="6"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
offset = Vector2( 250, 0 )

[node name="Position2D" type="Position2D" parent="Cross_Hair" index="0"]
position = Vector2( 248, 0 )
